JS: Add discardable proof-of-concept functionality to change tracklist, album art and title on drag&drop of files. CSS: Add overflow:hidden to prevent rubberband/bounce/whatever it's called, on OS X

--- a/css/mockup.scss
+++ b/css/mockup.scss
@@ -20,6 +20,7 @@
 
 body {
 	font-family: "Roboto";
+	overflow: hidden;
 }
 #outer-drawer {
 	position: absolute;
